fixed all the images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div>
-                    <img src="/images/banner.png" class="max-w-lg" />
+                    <img src="images/banner.png" class="max-w-lg" />
                     <div class="-mt-28 flex items-center gap-4 drop-shadow-lg bg-white p-5 rounded-sm w-60">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="46" viewBox="0 0 48 46"
@@ -106,7 +106,7 @@
                 <!-- Card Number 1 -->
                 <div class="card rounded-md bg-gradient-to-b from-[#F4F4F4FF] to-[#F4F4F400]">
                     <figure>
-                        <img class="pt-12" src="/images/tea-1.png" alt="" />
+                        <img class="pt-12" src="images/tea-1.png" alt="" />
                     </figure>
                     <div class="card-body">
                         <h2 class="text-xl font-extrabold">Milk Tea</h2>
@@ -116,7 +116,7 @@
                 <!-- Card Number 2 -->
                 <div class="card rounded-md bg-gradient-to-b from-[#F4F4F4FF] to-[#F4F4F400]">
                     <figure>
-                        <img class="pt-12" src="/images/tea-2.png" alt="" />
+                        <img class="pt-12" src="images/tea-2.png" alt="" />
                     </figure>
                     <div class="card-body">
                         <h2 class="text-xl font-extrabold">Black Tea</h2>
@@ -126,7 +126,7 @@
                 <!-- Card Number 3 -->
                 <div class="card rounded-md bg-gradient-to-b from-[#F4F4F4FF] to-[#F4F4F400]">
                     <figure>
-                        <img class="pt-12" src="/images/tea-3.png" alt="" />
+                        <img class="pt-12" src="images/tea-3.png" alt="" />
                     </figure>
                     <div class="card-body">
                         <h2 class="text-xl font-extrabold">Lemon Tea</h2>
@@ -136,7 +136,7 @@
                 <!-- Card Number 4 -->
                 <div class="card rounded-md bg-gradient-to-b from-[#F4F4F4FF] to-[#F4F4F400]">
                     <figure>
-                        <img class="pt-12" src="/images/tea-4.png" alt="" />
+                        <img class="pt-12" src="images/tea-4.png" alt="" />
                     </figure>
                     <div class="card-body">
                         <h2 class="text-xl font-extrabold">Green Tea</h2>
@@ -189,7 +189,7 @@
         </section>
 
 
-        
+
 
     </main>
     <footer>
