--- a/index.html
+++ b/index.html
@@ -169,10 +169,11 @@
                 </div>
                 <div class=" flex-1 flex  items-center">
                     <div class="space-y-6">
-                        <h3 class="text-4xl font-extrabold">Great Tea, Freshly 
+                        <h3 class="text-4xl font-extrabold">Great Tea, Freshly
                             <br> Presented
                         </h3>
-                        <p class="pb-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+                        <p class="pb-5">The meaning of gong cha is chanese is to provide the best tea to emperor from
+                            all
                             possessions. It represents the highest quality and self expectation. Establishing in 2006,
                             Gong cha had been
                             deeply appreciated by its custoers because of good words of mouth and unique customized
@@ -187,7 +188,30 @@
                 </div>
             </div>
         </section>
+        <!-- Super Client Section -->
+        <section
+            class="my-24 rounded-lg flex flex-col lg:flex-row gap-10 bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-20">
 
+            <div class="flex-1 space-y-5 ">
+                <h1 class="text-4xl font-extrabold text-white">Meet Our Super <br> Clients</h1>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+                <input type="button" value="Show All" class="btn bg-white" />
+            </div>
+
+
+            <div class="flex-1">
+                <div class="relative p-8 rounded-md bg-white">
+                    <img class="absolute -left-6 -top-6" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are
+                        interested to treatment</p>
+                    <h1 class="font-bold mt-4">Ilham Yuda</h1>
+                    <h2>Businessman</h2>
+                </div>
+            </div>
+
+        </section>
 
 
 
