--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto mt-20">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-6xl font-extrabold">It's good
@@ -50,7 +50,12 @@
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum
                         <br> Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white">
+                        Explore More
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                            <path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                    </button>
                 </div>
 
                 <div>
@@ -192,32 +197,174 @@
         <section
             class="my-24 rounded-lg flex flex-col lg:flex-row gap-10 bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-20">
 
-            <div class="flex-1 space-y-5 ">
-                <h1 class="text-4xl font-extrabold text-white">Meet Our Super <br> Clients</h1>
-                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even slightly
-                    believable. </p>
-                <input type="button" value="Show All" class="btn bg-white" />
+            <div class="flex items-center lg:pr-48">
+                <div class="space-y-5">
+                    <h1 class="text-4xl font-extrabold text-white">Meet Our Super <br> Clients</h1>
+                    <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
+                    <input type="button" value="Show All" class="btn  bg-white" />
+                </div>
             </div>
 
 
-            <div class="flex-1">
-                <div class="relative p-8 rounded-md bg-white">
-                    <img class="absolute -left-6 -top-6" src="images/client.png" alt="">
+            <div class="relative">
+                <!-- Next Review -->
+                <div class="z-10 opacity-40 mb-14 relative p-8 rounded-md bg-white">
+                    <img class="absolute -left-6 -top-6 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are
                         interested to treatment</p>
                     <h1 class="font-bold mt-4">Ilham Yuda</h1>
                     <h2>Businessman</h2>
+                    <div class="flex justify-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <circle cx="12.5" cy="3.64111" r="3.5" fill="#A2BDF6" />
+                            <circle cx="3.5" cy="11.6411" r="3.5" fill="#A2BDF6" />
+                            <circle cx="21.5" cy="11.6411" r="3.5" fill="#EDB7D5" />
+                            <circle cx="12.5" cy="19.6411" r="3.5" fill="#EDB7D5" />
+                        </svg>
+                    </div>
                 </div>
+                <!-- Current Review -->
+                <div class="z-20 absolute top-40 lg:-left-40 p-8 rounded-md bg-white lg:w-[430px]">
+                    <img class="absolute -left-6 -top-6 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are
+                        interested to treatment</p>
+                    <h1 class="font-bold mt-4">Ilham Yuda</h1>
+                    <h2>Businessman</h2>
+                    <div class="flex justify-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <circle cx="12.5" cy="3.64111" r="3.5" fill="#A2BDF6" />
+                            <circle cx="3.5" cy="11.6411" r="3.5" fill="#A2BDF6" />
+                            <circle cx="21.5" cy="11.6411" r="3.5" fill="#EDB7D5" />
+                            <circle cx="12.5" cy="19.6411" r="3.5" fill="#EDB7D5" />
+                        </svg>
+                    </div>
+                </div>
+                <!-- Previous Review -->
+                <div class="z-10 opacity-40 relative p-8 rounded-md bg-white">
+                    <img class="absolute -left-6 -top-6 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are
+                        interested to treatment</p>
+                    <h1 class="font-bold mt-4">Ilham Yuda</h1>
+                    <h2>Businessman</h2>
+                    <div class="flex justify-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <circle cx="12.5" cy="3.64111" r="3.5" fill="#A2BDF6" />
+                            <circle cx="3.5" cy="11.6411" r="3.5" fill="#A2BDF6" />
+                            <circle cx="21.5" cy="11.6411" r="3.5" fill="#EDB7D5" />
+                            <circle cx="12.5" cy="19.6411" r="3.5" fill="#EDB7D5" />
+                        </svg>
+                    </div>
+                </div>
+
+
             </div>
 
+        </section>
+        <!-- News & Events Section -->
+        <section class="text-center my-24">
+            <h2 class="text-4xl font-extrabold mb-5">News & Events</h2>
+            <p class="lg:max-w-3xl mb-9 mx-auto">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+            </p>
+            <!-- Card Container -->
+            <div class="lg:flex gap-6 justify-center">
+                <!-- Card Number 1 -->
+                <div class="card rounded-lg bg-white border border-gray-300 p-3 space-y-3 lg:w-80">
+                    <figure>
+                        <img class="rounded-sm" src="images/news-1.png" alt="" />
+                    </figure>
+                    <div class="text-left space-y-2">
+                        <h5>Feb 05, 2027</h5>
+                        <h2 class="text-lg font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <a href="" class="font-bold pt-3">Learn More</a>
+                    </div>
+                </div>
+                <!-- Card Number 2 -->
+                <div class="card rounded-lg bg-white border border-gray-300 p-3 space-y-3 lg:w-80">
+                    <figure>
+                        <img class="rounded-sm" src="images/news-2.png" alt="" />
+                    </figure>
+                    <div class="text-left space-y-2">
+                        <h5>Feb 05, 2027</h5>
+                        <h2 class="text-lg font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <a href="" class="font-bold pt-3">Learn More</a>
+                    </div>
+                </div>
+                <!-- Card Number 3 -->
+                <div class="card rounded-lg bg-white border border-gray-300 p-3 space-y-3 lg:w-80">
+                    <figure>
+                        <img class="rounded-sm" src="images/news-3.png" alt="" />
+                    </figure>
+                    <div class="text-left space-y-2">
+                        <h5>Feb 05, 2027</h5>
+                        <h2 class="text-lg font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <a href="" class="font-bold pt-3">Learn More</a>
+                    </div>
+                </div>
+
+
+            </div>
         </section>
 
 
 
     </main>
-    <footer>
-
+    <footer class="bg-gradient-to-r from-[#FF89381A] to-[#FF00001A] lg:px-44 lg:py-28 space-y-10">
+        <div class="flex justify-between ">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get strated?</span>
+                <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00]  text-white">Get Started</button>
+            </p>
+        </div>
+        <div class="footer  text-base-content">
+            <div>
+                <span class="footer-title">Quick Links</span>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Insurance</a>
+                <a class="link link-hover">Privacy Policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Our Service</span>
+                <a class="link link-hover">Life Insurance</a>
+                <a class="link link-hover">Car Insurance</a>
+                <a class="link link-hover">Health Insurance</a>
+                <a class="link link-hover">House Insurance</a>
+            </div>
+            <div>
+                <span class="footer-title">Help</span>
+                <a class="link link-hover">FAQs</a>
+                <a class="link link-hover">Contact Us</a>
+            </div>
+            <div>
+                <span class="footer-title">Subscribe to our newsletter</span>
+                <div class="form-control w-80">
+                    
+                    <div class="relative">
+                        <input type="text" placeholder="Email address" class="py-4 border-b-2 outline-none border-black bg-transparent" />
+                        <button class="btn text-white absolute bg-gradient-to-r from-[#FF8938] to-[#F00]  top-0 right-0 rounded-full">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                            <path d="M6.91406 3.92432L12.1315 9.14171L6.91406 14.3591" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-center pt-7">
+            <p>© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
